[package]
name = "gym_sniper"
version = "0.1.0"
edition = "2024"

[lib]
name = "gym_sniper"
path = "src/lib.rs"

[[bin]]
name = "gym_sniper"
path = "src/main.rs"

[[bin]]
name = "gym_sniper_gui"
path = "src/gui_main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
eframe = "0.29"
egui_extras = { version = "0.29", features = ["datepicker"] }
